--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <!-- Navigation Bar -->
-    <nav>
-        <ul>
+    <nav class="navbar">
+        <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About BugBusters</a></li>
             <li><a href="#basics">Bug Bounty Basics</a></li>
