--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BugBusters - Learn Bug Bounty</title>
+    <title>BugBusters - Home</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -12,11 +12,11 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About BugBusters</a></li>
-            <li><a href="#basics">Bug Bounty Basics</a></li>
-            <li><a href="#quizzes">Quizzes</a></li>
-            <li><a href="#game">Play Bug Match Game</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About BugBusters</a></li>
+            <li><a href="basics.html">Bug Bounty Basics</a></li>
+            <li><a href="quizzes.html">Quizzes</a></li>
+            <li><a href="game.html">Play Bug Match Game</a></li>
         </ul>
     </nav>
 
@@ -24,30 +24,6 @@
     <div id="home">
         <h1>Welcome to BugBusters</h1>
         <p>Learn all about bug bounty hunting and cybersecurity!</p>
-    </div>
-
-    <div id="about">
-        <h2>About BugBusters</h2>
-        <p>Insert your about content here.</p>
-    </div>
-
-    <div id="basics">
-        <h2>Bug Bounty Basics</h2>
-        <p>Insert your content about bug bounty basics here.</p>
-    </div>
-
-    <div id="quizzes">
-        <h2>Quizzes</h2>
-        <!-- Insert quiz content here -->
-        <p>Quiz 1: Injection Vulnerabilities</p>
-        <p>Quiz 2: Password Attacks</p>
-        <p>Quiz 3: Server-side Request Forgery (SSRF)</p>
-    </div>
-
-    <div id="game">
-        <h2>Play Bug Match Game</h2>
-        <!-- Insert mini game content here -->
-        <p>Right-click and inspect the webpage to find the hidden password!</p>
     </div>
 
     <script src="scripts/script.js"></script>
