--- a/about.html
+++ b/about.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About BugBusters</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About BugBusters</a></li>
+            <li><a href="basics.html">Bug Bounty Basics</a></li>
+            <li><a href="quizzes.html">Quizzes</a></li>
+            <li><a href="game.html">Play Bug Match Game</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <div id="about">
+        <h1>About BugBusters</h1>
+        <p>Insert your about content here.</p>
+    </div>
+</body>
+
+</html>
 
