--- a/game.html
+++ b/game.html
@@ -37,17 +37,17 @@
             let cardsWon = [];
 
             const cardArray = [
-                { name: 'card1', img: 'images/distracted.png' },
-                { name: 'card1', img: 'images/distracted.png' },
-                { name: 'card2', img: 'images/drake.png' },
-                { name: 'card2', img: 'images/drake.png' },
-                { name: 'card3', img: 'images/fine.png' },
-                { name: 'card3', img: 'images/fine.png' },
-                { name: 'card4', img: 'images/rollsafe.png' },
-                { name: 'card4', img: 'images/rollsafe.png' },
-                { name: 'card5', img: 'images/success.png' },
-                { name: 'card5', img: 'images/success.png' }
-                // ...add more pairs as needed
+                { name: 'card1', img: 'images/malware.png' },
+                { name: 'card1', img: 'images/malware.png' },
+                { name: 'card2', img: 'images/firewall.png' },
+                { name: 'card2', img: 'images/firewall.png' },
+                { name: 'card3', img: 'images/encryption.png' },
+                { name: 'card3', img: 'images/encryption.png' },
+                { name: 'card4', img: 'images/phishing.png' },
+                { name: 'card4', img: 'images/phishing.png' },
+                { name: 'card5', img: 'images/vulnerability.png' },
+                { name: 'card5', img: 'images/vulnerability.png' }
+        
             ];
 
             function shuffle(array) {
@@ -92,15 +92,15 @@
                     cards[secondCardId].removeEventListener('click', flipCard);
                     cardsWon.push(cardsChosen);
                 } else {
-                    cards[firstCardId].setAttribute('src', 'images/blank.png');
-                    cards[secondCardId].setAttribute('src', 'images/blank.png');
+                    cards[firstCardId].setAttribute('src', 'images/card.png');
+                    cards[secondCardId].setAttribute('src', 'images/card.png');
                 }
 
                 cardsChosen = [];
                 cardsChosenId = [];
 
                 if (cardsWon.length === cardArray.length / 2) {
-                    alert('Congratulations! You found them all!');
+                    alert('Congratulations! You matched the words!');
                 }
             }
 
