--- a/game.html
+++ b/game.html
@@ -61,7 +61,7 @@
 
                 for (let i = 0; i < cardArray.length; i++) {
                     const card = document.createElement('img');
-                    card.setAttribute('src', 'images/blank.png');
+                    card.setAttribute('src', 'images/card.png');
                     card.setAttribute('data-id', i);
                     card.addEventListener('click', flipCard);
                     grid.appendChild(card);
