--- a/game.html
+++ b/game.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Bug Match Game</title>
-    <link rel="stylesheet" href="style/styles.css">
+    <title>Bug Bounty Basics</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -19,6 +19,8 @@
             <li><a href="game.html">Play Bug Match Game</a></li>
         </ul>
     </nav>
+
+    <!-- Main Content -->
 
     <!-- Main Content -->
     <div id="game">
