--- a/game.html
+++ b/game.html
@@ -22,9 +22,11 @@
 
     <!-- Main Content -->
 
-    <!-- Main Content -->
+
     <div id="game">
         <h1>Play Bug Match Game</h1>
+        <p>*Recommended to minimize screen to 50%</p>
+        <p>Instructions: Click the 'start game' button and match the words together!</p>
         <div id="game-board"></div>
         <button id="reset-game">Start Game</button>
     </div>
