--- a/basics.html
+++ b/basics.html
@@ -23,7 +23,9 @@
     <!-- Main Content -->
     <div id="basics">
         <h1>Bug Bounty Basics</h1>
-        <p>Insert your content about bug bounty basics here.</p>
+        <p>Please stop being lazy and fill this out :D.</p>
+        <p>Disrespectfully,</p>
+        <p>Hayleigh</p>
     </div>
 </body>
 
