--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
     <!-- Main Content -->
     <div id="home">
-        <h1>Welcome to BugBusters</h1>
-        <p>Learn all about bug bounty hunting and cybersecurity!</p>
+        <h1>Welcome to my project</h1>
+        <p>This website aims to educate at an elementary level the principles of website insecurities and spark interest in bug bounty as a side hustle.</p>
+
+        <p>Thing's have been a mess so far, but at least it's my mess and I tried :D</p>
+        <img src="images/fine.png" alt="Fine">
     </div>
 
     <script src="scripts/script.js"></script>
