Update and rename oldindex.html to index.html

--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     <section class="hero">
       <div class="hero-container">
         <div class="column-left">
-          <h1>Learn a Skill!</h1>
-          <p>
-            No gimmicks, just fun free learning! Unleash your inner detective
+        <h1>Learn a Skill!</h1>
+        <p> No gimmicks, just fun free learning! Unleash your inner detective
             today!
-          </p>
-          <a href="basics.html"><button>Get started!</button></a>
+        </p>
+        <a href="basics.html"><button>Get started!</button></a>
         </div>
         <div class="column-right">
           <img
