--- a/basics.html
+++ b/basics.html
@@ -22,36 +22,70 @@
     
 <body>
 
-<section id="injection">
-    <h2>Injection Vulnerabilities</h2>
+<section class="hero">
+      <div class="hero-container">
+        <div class="column-left">
+        <h2>Injection Vulnerabilities</h2>
 
     <p>An injection vulnerability is like a sneaky trick that hackers use to make a computer do things it shouldn't. Imagine you're playing a game where you need to solve puzzles. Instead of solving the puzzles the right way, a hacker might try to sneak in some tricky code to cheat and win the game without playing fair.</p>
 
     <p>One common type of injection attack is called SQL injection. It's like someone trying to sneak into a secret room by saying a magic word that the door understands. If the door believes the magic word, even if it's not the right one, it will let the person in!</p>
 
     <p>But don't worry! There are ways to protect against injection attacks. Just like how you lock your diary with a special key, programmers can use special tools to lock their code and keep it safe from sneaky hackers.</p>
-</section>
+        </p>
+        </div>
+        <div class="column-right">
+          <img
+            src="images/fine.png"
+            alt="illustration"
+            class="hero-image"
+          />
+        </div>
+      </div>
+    </section>
 
-<section id="password">
-    <h2>Password Attacks</h2>
+<section class="hero">
+      <div class="hero-container">
+        <div class="column-left">
+       <h2>Password Attacks</h2>
 
     <p>Have you ever played a game where you need a secret password to enter a special place? Passwords are like secret keys that unlock doors. But sometimes, mean hackers try to guess or steal these passwords to get into places they shouldn't be.</p>
 
     <p>Imagine if you had a super special password, like "banana123", but you told everyone about it. A hacker might try to guess your password by trying lots of different words like "apple123" or "orange123" until they get it right!</p>
 
-    <p>That's why it's important to choose strong passwords that are hard for hackers to guess. It's like creating a secret code that only you know, so even if someone tries to guess it, they won't be able to!</p>
-</section>
-
-<section id="ssrf">
-    <h2>Server-Side Request Forgery</h2>
-
-    <p>Server-Side Request Forgery (SSRF) is like a sneaky way of asking a computer to do something without it knowing who's asking. Imagine you're asking a friend for help, but instead of asking directly, you send a letter to someone else, and that someone else asks your friend for you.</p>
-
-    <p>For example, if you wanted to know what your friend's favorite color is, you might send a letter to your teacher asking them to ask your friend. But what if your teacher doesn't check who's asking and just tells you the answer? That's like SSRF!</p>
-
-    <p>But don't worry! Just like how you should always check who's knocking on your door before opening it, computer programs can be designed to check who's asking for help and only help the right people.</p>
-</section>
-
+    <p>That's why it's important to choose strong passwords that are hard for hackers to guess. It's like creating a secret code that only you know, so even if someone tries to guess it, they won't be able to!
+        </p>
+        </div>
+        <div class="column-right">
+          <img
+            src="images/fine.png"
+            alt="illustration"
+            class="hero-image"
+          />
+        </div>
+      </div>
+    </section>
+<section class="hero">
+      <div class="hero-container">
+        <div class="column-left">
+        <h2>Server-Side Request Forgery</h2>
+        <p>Server-Side Request Forgery (SSRF) is like a sneaky way of asking a computer to do something without it knowing who's asking. 
+           Imagine you're asking a friend for help, but instead of asking directly, you send a letter to someone else, and that someone else asks your friend for you.
+           For example, if you wanted to know what your friend's favorite color is, you might send a letter to your teacher asking them to ask your friend. 
+            But what if your teacher doesn't check who's asking and just tells you the answer? That's like SSRF!
+            But don't worry! Just like how you should always check who's knocking on your door before opening it, computer programs can be designed to check who's asking for help and only help the right people.
+        </p>
+        </div>
+        <div class="column-right">
+          <img
+            src="images/fine.png"
+            alt="illustration"
+            class="hero-image"
+          />
+        </div>
+      </div>
+    </section>
+  </body>
 </body>
 </html>
 
