--- a/basics.html
+++ b/basics.html
@@ -43,7 +43,9 @@
         </div>
       </div>
     </section>
+<pre>
 
+</pre>
 <section class="hero">
       <div class="hero-container">
         <div class="column-left">
@@ -65,6 +67,10 @@
         </div>
       </div>
     </section>
+
+<pre>
+
+</pre>
 <section class="hero">
       <div class="hero-container">
         <div class="column-left">
