--- a/basics.html
+++ b/basics.html
@@ -36,7 +36,7 @@
         </div>
         <div class="column-right">
           <img
-            src="images/fine.png"
+            src="images/card.png"
             alt="illustration"
             class="hero-image"
           />
@@ -62,7 +62,7 @@
         </div>
         <div class="column-right">
           <img
-            src="images/fine.png"
+            src="images/card.png"
             alt="illustration"
             class="hero-image"
           />
@@ -88,7 +88,7 @@
         </div>
         <div class="column-right">
           <img
-            src="images/fine.png"
+            src="images/card.png"
             alt="illustration"
             class="hero-image"
           />
