--- a/quizzes.html
+++ b/quizzes.html
@@ -21,7 +21,10 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container">
+   <section class="hero">
+      <div class="hero-container">
+        <div class="column-left">
+        
         <h1>Quizzes</h1>
         
 <!-- Question 1-->
@@ -75,7 +78,9 @@
     <p id="quiz3-feedback"></p>
 </div>
 
-
+ </div>
+      </div>
+    </section>
 <script>
     // Quiz 1: What is Phishing?
     document.getElementById('quiz1').addEventListener('change', function() {
