--- a/quizzes.html
+++ b/quizzes.html
@@ -81,6 +81,15 @@
  </div>
       </div>
     </section>
+     <div class="column-right">
+          <img
+            src="images/sql.png"
+            alt="illustration"
+            class="hero-image"
+          />
+        </div>
+      </div>
+    </section>
 <script>
     // Quiz 1: What is Phishing?
     document.getElementById('quiz1').addEventListener('change', function() {
