--- a/quizzes.html
+++ b/quizzes.html
@@ -63,7 +63,7 @@
 
 <!-- Quiz 3: What is Two-Factor Authentication (2FA)? -->
 <div class="quiz">
-    <h2>Question 3: What is Two-Factor Authentication (2FA)?</h2>
+    <h2>Question 3</h2>
     <p>What is Two-Factor Authentication (2FA)?</p>
     <form id="quiz3">
         <input type="radio" id="q3a1" name="q3" value="q3a1">
